Added <jvmarg value="-enableassertions"/> to junit tasks.  This isn't switched on by default (which seems crazy), and so failures of sanity checks (untested, naturally) can go undetected.

--- a/util/build.xml
+++ b/util/build.xml
@@ -849,6 +849,8 @@
     <junit printsummary="${junit.summary}" haltonfailure="yes"
            filtertrace="${junit.filtertrace}"
            fork="${junit.fork}">
+
+      <jvmarg value="-enableassertions"/>
       <classpath refid="tests-classpath"/>
 
       <sysproperty key="java.io.tmpdir" value="${build.tests}"/>
@@ -877,6 +879,7 @@
           haltonfailure="yes"
           fork="${junit.fork}"
           filtertrace="${junit.filtertrace}">
+      <jvmarg value="-enableassertions"/>
       <sysproperty key="java.io.tmpfile" value="${build.tests}"/>
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
