--- a/templates/application/build.xml
+++ b/templates/application/build.xml
@@ -278,6 +278,18 @@
   <property name="tests-classpath.value" refid="tests-classpath"/>
 
   <!--
+   !    ============
+   !    Library path
+   !    ============
+   !    Used by test targets for locating native libraries.
+   !-->
+  <path id="tests-libpath.id">
+    <pathelement path="${java.library.path}"/>
+    <pathelement location="${star.jar.dir}/${os.arch}"/>
+  </path>
+  <property name="tests-libpath" refid="tests-libpath.id"/>
+
+  <!--
    !    =========================================
    !    Check availability of direct dependencies
    !    =========================================
@@ -912,6 +924,7 @@
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
+      <sysproperty key="java.library.path" value="${tests-libpath}"/>
 
       <formatter type="brief" usefile="false"/>
 
@@ -939,6 +952,7 @@
       <sysproperty key="build.tests" value="${build.tests}"/>
       <sysproperty key="tests-classpath.value"
                    value="${tests-classpath.value}"/>
+      <sysproperty key="java.library.path" value="${tests-libpath}"/>
       <classpath refid="tests-classpath"/>
       <jvmarg value="${junit.assertions}"/>
       <formatter type="plain" usefile="false"/>
