Fixed a bug; was appending to existing .install rather than starting a new one.

--- a/fits/build.xml
+++ b/fits/build.xml
@@ -647,7 +647,7 @@
     <loggedcopy todir="${star.lib}"
                 logfile="${install.log}"
                 overwrite="${install.overwrite}"
-                logfileAppend="true">
+                logfileAppend="false">
       <fileset dir="${dist.lib}">
         <include name="**/*.jar"/>
         <include name="**/*.zip"/>
