Package reorganisation: removed all the uk/ac/starlink/table/view classes from the TABLE libary package and put them in a new application package TOPCAT with a new namespace uk.ac.starlink.topcat.

--- a/build.xml
+++ b/build.xml
@@ -177,11 +177,14 @@
     <echo message="Executing SPLAT target: ${what}"/>
     <ant dir="./splat" target="${what}"/>
 
-    <echo message="Executing Treeview target: ${what}"/>
-    <ant dir="./treeview" target="${what}"/>
-
     <echo message="Executing Mirage target: ${what}"/>
     <ant dir="./mirage" target="${what}"/>
+
+    <echo message="Executing TOPCAT target: ${what}"/>
+    <ant dir="./topcat" target="${what}"/>
+
+    <echo message="Executing Treeview target: ${what}"/>
+    <ant dir="./treeview" target="${what}"/>
     
     <echo message="Executing Pal target: ${what}"/>
     <ant dir="./pal" target="${what}"/>
