--- a/splat/build.xml
+++ b/splat/build.xml
@@ -84,7 +84,7 @@
   <!-- Define the package name and current versions -->
   <property name="Name" value="SPLAT"/>
   <property name="name" value="splat"/>
-  <property name="version" value="1.1"/>
+  <property name="version" value="2.0"/>
 
   <!-- The Java package name -->
   <property name="package.name" value="uk.ac.starlink.splat"/>
@@ -517,10 +517,11 @@
         <attribute name="Main-Class"
                    value="uk.ac.starlink.splat.iface.SplatBrowserMain"/>
         <attribute name="Class-Path"
-value="bsh-1.2b7.jar colt.jar diva.jar jdom.jar jhall.jar splat_help.jar
-../astgui/astgui.jar ../ndx/ndx.jar ../hdx/hdx.jar ../array/array.jar ../tamfits/tamfits.jar
-../jniast/jniast.jar ../soapserver/soapserver.jar ../fits/fits.jar
-../hds/hds.jar ../treeview/treeview.jar ../pal/pal.jar"/>
+value="bsh-1.2b7.jar splat_colt.jar diva.jar jdom.jar jhall.jar splat_help.jar
+jsci_core.jar jsci_wavelet.jar ../astgui/astgui.jar ../ndx/ndx.jar 
+../hdx/hdx.jar ../array/array.jar ../tamfits/tamfits.jar ../jniast/jniast.jar 
+../soapserver/soapserver.jar ../fits/fits.jar ../hds/hds.jar 
+../treeview/treeview.jar ../pal/pal.jar"/>
       </manifest>
     </jar>
   </target>
