--- a/hds/build.xml
+++ b/hds/build.xml
@@ -367,7 +367,7 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path" 
-                   value="../junit/junit.jar ../jnihds/jnihds.jar"/>
+                   value="../junit/junit.jar ../jnihds/jnihds.jar ../hdx/hdx.jar"/>
       </manifest>
     </jar>
 
