--- a/ndx/build.xml
+++ b/ndx/build.xml
@@ -397,7 +397,7 @@
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path" 
          value="../junit/junit.jar ../array/array.jar ../jniast/jniast.jar
-                ../util/util.jar"/>
+                ../util/util.jar ../hdx/hdx.jar"/>
       </manifest>
     </jar>
 
