--- a/util/build.xml
+++ b/util/build.xml
@@ -871,7 +871,7 @@
 
       <batchtest>
         <fileset dir="${tests.dir}">
-          <include name="**/*Test*"/>
+          <include name="**/*Test.java"/>
         </fileset>
       </batchtest>
 
