--- a/util/build.xml
+++ b/util/build.xml
@@ -339,6 +339,7 @@
     <copy todir="${build.classes}">
       <fileset dir="${java.dir}">
         <include name="**/images/*"/>
+        <include name="**/text/*"/>
       </fileset>
     </copy>
 
