--- a/hdx/build.xml
+++ b/hdx/build.xml
@@ -182,9 +182,6 @@
    !-->
   <extclasspath id="installed.classpath">
 
-    <!-- Array, old version -->
-    <pathelement location="${star.jar.dir}/oldarray/array.jar"/>
-    
     <!-- FITS -->
     <pathelement location="${star.jar.dir}/fits/fits.jar"/>
     
@@ -194,9 +191,6 @@
     <!-- JNIAST -->
     <pathelement location="${star.jar.dir}/jniast/jniast.jar"/>
     
-    <!-- dom4j -->
-    <pathelement location="${star.jar.dir}/dom4j/dom4j-full.jar"/>
-
   </extclasspath>
 
   <!-- Generate the local build classpath. This is the most difficult
@@ -216,10 +210,8 @@
    !   the extra classpath.
    !-->
   <extclasspath id="built.jarpath">
-    <pathelement location="${star.build.dir}/oldarray/lib/oldarray/array.jar"/>
     <pathelement location="${star.build.dir}/fits/lib/fits/fits.jar"/>
     <pathelement location="${star.build.dir}/jniast/lib/jniast/jniast.jar"/>
-    <pathelement location="${star.build.dir}/dom4j/lib/dom4j/dom4j-full.jar"/>
   </extclasspath>
 
   <!-- Local third party jars. Normally these will be kept in their
@@ -420,8 +412,10 @@
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path" 
-                   value="../oldarray/array.jar ../fits/fits.jar
-../hds/hds.jar ../jniast/jniast.jar ../dom4j/dom4j-full.jar"/>
+                   value="
+          ../fits/fits.jar
+          ../hds/hds.jar
+          ../jniast/jniast.jar"/>
       </manifest>
     </jar>
   </target>
